# git-steak

./: .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: pre-commit.yml
src/git_steak/: logging.py  main.py
