[project]
name = "git-steak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cesar Kawakami", email = "me@crkw.io" }
]
requires-python = ">=3.13"
dependencies = [
    "pyright>=1.1.400",
    "ruff>=0.11.8",
    "typer>=0.15.3",
]

[project.scripts]
git-steak = "git_steak:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
backend-path = "."
